crates/wac-parser/tests/resolution/fail/import-conflict.wac
package test:comp;

let x = new foo:bar { ... };

import foo: func();
